--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "client-sessions": "^0.7.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
-    "serve-favicon": "~2.3.0",
-    "nodemon":"*"
+    "nodemon": "*",
+    "serve-favicon": "~2.3.0"
   }
 }
