--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.4",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
     "nodemon": "*",
     "serve-favicon": "~2.3.0"
   }
