--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql": "^2.11.1",
     "node-uuid": "^1.4.7",
     "nodemon": "*",
+    "opts": "^1.2.2",
     "serve-favicon": "~2.3.0"
   }
 }
